--- a/src/components/StudentRegistration.css
+++ b/src/components/StudentRegistration.css
@@ -40,7 +40,7 @@
   }
   
   .student-registration-add-button:hover {
-    background-color: #218838;
+    background-color: slateblue;
   }
   
   .student-registration-list {
@@ -72,4 +72,29 @@
     font-size: 1.1rem;
     color: #333;
   }
-  
+  .error-message {
+    color: red;
+    font-size: 1rem;
+    margin-top: 10px;
+  }
+  .popup-box {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  border: #218838 1px solid;
+
+    color: #218838;
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    font-size: 1rem;
+    text-align: center;
+  }
+.edit-button{
+  color:green;
+}
+.delete-button{
+  color:green;
+}
